# SoundBridge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
apps/desktop/: Cargo.toml  README.md
apps/desktop/src/: main.rs
apps/mobile/: Cargo.toml  README.md
apps/mobile/src/: main.rs
apps/web/: README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.js  page.js
apps/web/app/lib/: signalStore.js
apps/web/public/: index.html  main.js  style.css
crates/sb-audio/: Cargo.toml
crates/sb-audio/src/: lib.rs
crates/sb-core/: Cargo.toml
crates/sb-core/src/: lib.rs  lifecycle.rs  main.rs  model.rs
crates/sb-transport/: Cargo.toml
crates/sb-transport/src/: discovery.rs  lib.rs  realtime.rs
docs/architecture/: ADR-0001-system-overview.md  IMPLEMENTATION-PHASES.md  V1-LAUNCH-CHECKLIST.md  WEB-COMPATIBILITY.md
docs/benchmarks/: baseline-plan.md
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
protocol/: session-v1.md
scripts/: realtime-client.ps1  realtime-server.ps1  run-smoke.ps1  test-all.ps1
(+5 files in other folders)
